force-app/main/default/objects/AC_SLA_Type__c/AC_SLA_Type__c.object-meta.xml
<CustomObject>
    <label>AC SLA Type</label>
    <nameField>
        <label>AC SLA Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SLA Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>