force-app/main/default/objects/AC_SLA_Type__c/fields/All_Notifications__c.field-meta.xml
<CustomField>
    <fullName>All_Notifications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>All Notifications</label>
    <type>Checkbox</type>
</CustomField>