force-app/main/default/objects/AC_SLA_Type__c/fields/Minutes_to_Onsite__c.field-meta.xml
<CustomField>
    <fullName>Minutes_to_Onsite__c</fullName>
    <label>Minutes to Onsite</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>